* 2013-11-21 - marcus.klein@open-xchange.com

 - Fix for bug 26354: Use storage methods that to not rely on cached user attributes causing wrong attributes to be saved.

* 2013-11-19 - tobias.friedrich@open-xchange.com

 - Fix for bug 29855: Order EDIT-actions based on new directory version 

* 2013-11-19 - marc.arens@open-xchange.com

 - Fix for bug 29851: Keep Stanza to send proper client acks before recasting for local/remote delivery
 
* 2013-11-19 - thorben.betten@open-xchange.com

 - Fix for bug 29438: Deal with changing User-Agent identifier when Apple Media Player jumps in
 - Fix for bug 29887: Check service availability prior to using it

* 2013-11-18 - tobias.friedrich@open-xchange.com

 - Fix for bug 29391: Extend the size of the 'name' column in the 'infostoreReservedPaths' table 
 - Fix for bug 29866: Don't carry over empty last-modification timestamp if appointment was not updated 

* 2013-11-15 - marc.arens@open-xchange.com

 - Fix for bug 29794: Prevent cuncurrent cleanup via mutual exclusion
 - Fix for bug 29795: Prevent cuncurrent cleanup via mutual exclusion
 
* 2013-11-14 - thorben.betten@open-xchange.com

 - Fix for bug 29824: Don't re-distribute already remotely received events

* 2013-11-14 - tobias.friedrich@open-xchange.com

 - Fix for bug 29817: Consider "If-Match" header on DELETE and PUT operations
 - Fix for bug 29770: Use custom (de)serialization for session in distributed events 

* 2013-11-13 - thorben.betten@open-xchange.com

 - Fix for bug 29790: Check availability of session event property

* 2013-11-13 - jan.bauerdick@open-xchange.com

 - Fix for bug 29693: Use contact_id to search contact

* 2013-11-13 - martin.herfurth@open-xchange.com

 - Fix for bug 29759: Respect com.openexchange.calendar.undefinedstatusconflict parameter.

* 2013-11-12 - thorben.betten@open-xchange.com

 - Fix for bug 29770: Only distribute Java POJOs
 - Fix for bug 29762: Added proper mapping for "MOBILITY" constant from UserPermissionBits.java